--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </div>
         </div>
     </div>
-    <script src="/scripts/three.r95.min.js"></script>
-    <script src="/scripts/vanta.globe.min.js"></script>
+    <script src="scripts/three.r95.min.js"></script>
+    <script src="scripts/vanta.globe.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="scripts/main.js"></script>
 </body>
